--- a/files/测评填写/styles.css
+++ b/files/测评填写/styles.css
@@ -3737,12 +3737,30 @@
   color:#000000;
   text-align:left;
 }
-#u232_div {
+#u232 {
+  position:fixed;
+  right:12px;
+  bottom:30px;
+}
+#u232_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u232_state0_content {
   position:absolute;
   left:0px;
   top:0px;
-  width:101px;
-  height:38px;
+  width:1px;
+  height:1px;
+}
+#u233_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:129px;
+  height:50px;
   background:inherit;
   background-color:rgba(102, 102, 102, 1);
   border:none;
@@ -3750,45 +3768,75 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  color:#FFFFFF;
-  text-align:center;
-}
-#u232 {
-  position:absolute;
-  left:1127px;
-  top:718px;
-  width:101px;
-  height:38px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:16px;
   color:#FFFFFF;
   text-align:center;
 }
 #u233 {
   position:absolute;
+  left:31px;
+  top:86px;
+  width:129px;
+  height:50px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:16px;
+  color:#FFFFFF;
+  text-align:center;
+}
+#u233_div.mouseOver {
+  position:absolute;
   left:0px;
-  top:11px;
-  width:101px;
-  word-wrap:break-word;
+  top:0px;
+  width:129px;
+  height:50px;
+  background:inherit;
+  background-color:rgba(51, 51, 51, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:16px;
+  color:#FFFFFF;
+  text-align:center;
+}
+#u233.mouseOver {
 }
 #u234 {
   position:absolute;
-  left:1068px;
-  top:632px;
+  left:0px;
+  top:16px;
+  width:129px;
+  word-wrap:break-word;
+}
+#u235 {
+  position:absolute;
+  left:0px;
+  top:0px;
   visibility:hidden;
 }
-#u234_state0 {
+#u235_state0 {
   position:relative;
   left:0px;
   top:0px;
   background-image:none;
 }
-#u234_state0_content {
+#u235_state0_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
 }
-#u235_div {
+#u236_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -3805,66 +3853,66 @@
   font-weight:700;
   font-style:normal;
   color:#666666;
-}
-#u235 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:160px;
-  height:43px;
-  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
-  font-weight:700;
-  font-style:normal;
-  color:#666666;
-}
-#u235_div.mouseOver {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:160px;
-  height:43px;
-  background:inherit;
-  background-color:rgba(242, 242, 242, 1);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
-  font-weight:700;
-  font-style:normal;
-  color:#666666;
-}
-#u235.mouseOver {
-}
-#u235_div.selected {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:160px;
-  height:43px;
-  background:inherit;
-  background-color:rgba(242, 242, 242, 1);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
-  font-weight:700;
-  font-style:normal;
-  color:#666666;
-}
-#u235.selected {
 }
 #u236 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:43px;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  color:#666666;
+}
+#u236_div.mouseOver {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:43px;
+  background:inherit;
+  background-color:rgba(242, 242, 242, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  color:#666666;
+}
+#u236.mouseOver {
+}
+#u236_div.selected {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:43px;
+  background:inherit;
+  background-color:rgba(242, 242, 242, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  color:#666666;
+}
+#u236.selected {
+}
+#u237 {
   position:absolute;
   left:2px;
   top:14px;
   width:156px;
   word-wrap:break-word;
 }
-#u237_div {
+#u238_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -3882,7 +3930,7 @@
   font-style:normal;
   color:#666666;
 }
-#u237 {
+#u238 {
   position:absolute;
   left:0px;
   top:43px;
@@ -3893,7 +3941,7 @@
   font-style:normal;
   color:#666666;
 }
-#u237_div.mouseOver {
+#u238_div.mouseOver {
   position:absolute;
   left:0px;
   top:0px;
@@ -3911,9 +3959,9 @@
   font-style:normal;
   color:#666666;
 }
-#u237.mouseOver {
+#u238.mouseOver {
 }
-#u237_div.selected {
+#u238_div.selected {
   position:absolute;
   left:0px;
   top:0px;
@@ -3931,9 +3979,9 @@
   font-style:normal;
   color:#666666;
 }
-#u237.selected {
+#u238.selected {
 }
-#u238 {
+#u239 {
   position:absolute;
   left:2px;
   top:14px;
