--- a/files/语言-语言流畅性/styles.css
+++ b/files/语言-语言流畅性/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1432px;
+  width:1482px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u1198_div {
+#u0_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -29,7 +29,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u1198 {
+#u0 {
   position:absolute;
   left:400px;
   top:30px;
@@ -39,21 +39,21 @@
   font-weight:400;
   font-style:normal;
 }
-#u1199 {
+#u1 {
   position:absolute;
   left:0px;
   top:0px;
   width:214px;
   white-space:nowrap;
 }
-#u1200_img {
+#u2_img {
   position:absolute;
   left:0px;
   top:0px;
   width:870px;
   height:72px;
 }
-#u1200 {
+#u2 {
   position:absolute;
   left:53px;
   top:88px;
@@ -65,14 +65,14 @@
   color:#FFFFFF;
   line-height:28px;
 }
-#u1201 {
+#u3 {
   position:absolute;
   left:8px;
   top:8px;
   width:862px;
   word-wrap:break-word;
 }
-#u1202_div {
+#u4_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -86,21 +86,21 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u1202 {
+#u4 {
   position:absolute;
   left:344px;
   top:413px;
   width:121px;
   height:40px;
 }
-#u1203 {
+#u5 {
   position:absolute;
   left:2px;
   top:11px;
   width:117px;
   word-wrap:break-word;
 }
-#u1204_div {
+#u6_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -114,21 +114,21 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u1204 {
+#u6 {
   position:absolute;
   left:498px;
   top:413px;
   width:121px;
   height:40px;
 }
-#u1205 {
+#u7 {
   position:absolute;
   left:2px;
   top:11px;
   width:117px;
   word-wrap:break-word;
 }
-#u1206_div {
+#u8_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -143,7 +143,7 @@
   box-shadow:none;
   font-size:29px;
 }
-#u1206 {
+#u8 {
   position:absolute;
   left:374px;
   top:249px;
@@ -151,14 +151,14 @@
   height:53px;
   font-size:29px;
 }
-#u1207 {
+#u9 {
   position:absolute;
   left:2px;
   top:6px;
   width:209px;
   word-wrap:break-word;
 }
-#u1208_div {
+#u10_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -176,7 +176,7 @@
   font-style:normal;
   font-size:30px;
 }
-#u1208 {
+#u10 {
   position:absolute;
   left:1073px;
   top:176px;
@@ -187,14 +187,14 @@
   font-style:normal;
   font-size:30px;
 }
-#u1209 {
+#u11 {
   position:absolute;
   left:0px;
   top:0px;
   width:178px;
   white-space:nowrap;
 }
-#u1210_div {
+#u12_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -212,7 +212,7 @@
   font-style:normal;
   font-size:30px;
 }
-#u1210 {
+#u12 {
   position:absolute;
   left:1073px;
   top:237px;
@@ -223,14 +223,14 @@
   font-style:normal;
   font-size:30px;
 }
-#u1211 {
+#u13 {
   position:absolute;
   left:0px;
   top:0px;
   width:152px;
   white-space:nowrap;
 }
-#u1212_div {
+#u14_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -245,7 +245,7 @@
   box-shadow:none;
   font-size:40px;
 }
-#u1212 {
+#u14 {
   position:absolute;
   left:1258px;
   top:239px;
@@ -253,14 +253,14 @@
   height:40px;
   font-size:40px;
 }
-#u1213 {
+#u15 {
   position:absolute;
   left:2px;
   top:-2px;
   width:73px;
   word-wrap:break-word;
 }
-#u1214_div {
+#u16_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -275,7 +275,7 @@
   box-shadow:none;
   font-size:40px;
 }
-#u1214 {
+#u16 {
   position:absolute;
   left:1355px;
   top:239px;
@@ -283,14 +283,14 @@
   height:40px;
   font-size:40px;
 }
-#u1215 {
+#u17 {
   position:absolute;
   left:2px;
   top:-2px;
   width:73px;
   word-wrap:break-word;
 }
-#u1216_div {
+#u18_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -304,21 +304,21 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u1216 {
+#u18 {
   position:absolute;
   left:1073px;
-  top:385px;
+  top:402px;
   width:121px;
   height:40px;
 }
-#u1217 {
+#u19 {
   position:absolute;
   left:2px;
   top:11px;
   width:117px;
   word-wrap:break-word;
 }
-#u1218_div {
+#u20_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -332,21 +332,73 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u1218 {
+#u20 {
   position:absolute;
   left:1227px;
-  top:385px;
+  top:402px;
   width:121px;
   height:40px;
 }
-#u1219 {
+#u21 {
   position:absolute;
   left:2px;
   top:11px;
   width:117px;
   word-wrap:break-word;
 }
-#u1220_div {
+#u22_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:166px;
+  height:50px;
+  background:inherit;
+  background-color:rgba(102, 102, 102, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:29px;
+}
+#u22 {
+  position:absolute;
+  left:1073px;
+  top:299px;
+  width:166px;
+  height:50px;
+  font-size:29px;
+}
+#u23 {
+  position:absolute;
+  left:2px;
+  top:4px;
+  width:162px;
+  word-wrap:break-word;
+}
+#u24_img {
+  position:absolute;
+  left:-2px;
+  top:-10px;
+  width:249px;
+  height:25px;
+}
+#u24 {
+  position:absolute;
+  left:744px;
+  top:273px;
+  width:237px;
+  height:5px;
+}
+#u25 {
+  position:absolute;
+  left:2px;
+  top:-6px;
+  width:233px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u26_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -361,40 +413,18 @@
   box-shadow:none;
   font-size:29px;
 }
-#u1220 {
+#u26 {
   position:absolute;
-  left:1073px;
-  top:292px;
+  left:1269px;
+  top:299px;
   width:213px;
   height:50px;
   font-size:29px;
 }
-#u1221 {
+#u27 {
   position:absolute;
   left:2px;
   top:4px;
   width:209px;
-  word-wrap:break-word;
-}
-#u1222_img {
-  position:absolute;
-  left:-2px;
-  top:-10px;
-  width:249px;
-  height:25px;
-}
-#u1222 {
-  position:absolute;
-  left:744px;
-  top:273px;
-  width:237px;
-  height:5px;
-}
-#u1223 {
-  position:absolute;
-  left:2px;
-  top:-6px;
-  width:233px;
-  visibility:hidden;
   word-wrap:break-word;
 }
